# MRT_Assn_6

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot/lib/robot/: move_circle  moving_circle
install/robot/share/robot/: launch.launch  package.sh  package.xml
install/robot/share/robot/urdf/: models.urdf
log/: latest_build
src/robot/: setup.py
src/robot/configs/: robot_config.rviz
src/robot/launch/: gazebo.launch.py
src/robot/models/: models.sdf
src/robot/movement/: move_circle.py
